--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p class="parrafo4">Nuestros disruptivos diseñadores han creado adaptaciones increibles! Te gustaría vivir en una? Chusmealas <a class="aca" href="google.com">acá</a>.</p>
             </div>
             <div class="abajo">
-            <img class="fotos" src="img/enellago.png" alt="Combi-barco en un lago">
+            <img class="fotos" src="enellago.png" alt="Combi-barco en un lago">
             <h2>¡a jugar! creá la tuya propia</h2>
             <p class="parrafo4">Te gustaría crearla desde 0? Te invitamos <a class="aca" href="google.com">a jugar</a> en nuestra interfaz y diseñarla vos mismo!</p>
             </div>
